fix overflow bag

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -15,14 +15,13 @@
   &__call-bar {
     color: $color-white;
     display: flex;
-    position: relative;
-    top: 35px;
-    left: 50%;
-    right: 0;
+    padding-top: 35px;
+    padding-left: 45%;
+
   }
 
   &__phone {
-    margin: 0 5%;
+    margin: 0 10%;
     white-space: nowrap;
   }
 
@@ -67,8 +66,8 @@
 
     &__call-bar {
       flex-direction: column;
+      padding-left: 0;
       align-items: center;
-      left: 0;
     }
 
     &__phone {
