--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -7,6 +7,9 @@ html {
   font-size: 16px;
   line-height: 24px;
   scroll-behavior: smooth;
+}
+
+body {
   overflow-x: hidden;
 }
 
